Grandes alterações nao vou listar tudo >:(

--- a/Components/Buttons/HomeButton.razor
+++ b/Components/Buttons/HomeButton.razor
@@ -1,7 +1,6 @@
 @namespace modulum.Components.Buttons
 
-<MudLink
-    Href="/"
+<MudLink Href="/System"
     Class="ml-3"
     Target="_self"
     Color="Color.Inherit"
