--- a/Components/Custom/SykiDataGridSearchTextField.razor
+++ b/Components/Custom/SykiDataGridSearchTextField.razor
@@ -6,7 +6,7 @@
             Class="mt-0 mx-0"
             Value="@Value"
             Immediate="true"
-            Margin="Margin.Dense"
+            Margin="Margin.Normal"
             IconSize="Size.Medium"
             Placeholder="@Placeholder"
             Variant="Variant.Outlined"
