--- a/Components/Custom/SykiDatePicker.razor
+++ b/Components/Custom/SykiDatePicker.razor
@@ -1,7 +1,7 @@
 @namespace modulum.Components.Custom
 
 <MudDatePicker
-    Margin="Margin.Dense"
+    Margin="Margin.Normal"
     Variant="Variant.Outlined"
     Editable="@Editable"
     Required="true"
