--- a/Components/Custom/SykiTextField.razor
+++ b/Components/Custom/SykiTextField.razor
@@ -11,7 +11,7 @@
     AutoGrow="@AutoGrow"
     MaxLines="@MaxLines"
     ReadOnly="@ReadOnly"
-    Margin="Margin.Dense"
+    Margin="Margin.Normal"
     MaxLength="@MaxLength"
     AutoFocus="@AutoFocus"
     RequiredError="Informe!"
