--- a/Components/Indexes/IndexCard.razor
+++ b/Components/Indexes/IndexCard.razor
@@ -1,7 +1,7 @@
 ﻿@namespace modulum.Components.Indexes
 
 <MudItem onclick="@Navegar" xs="12" sm="6" md="4" lg="4">
-    <MudPaper Class="index-card-hover d-flex align-center justify-center mud-width-full py-4" Style="cursor: pointer;">
+    <MudPaper Class="index-card-hover d-flex align-center justify-center mud-width-full py-4" Style="cursor: pointer;" Elevation="0">
         <MudStack AlignItems="AlignItems.Center">
             <MudIcon Icon="@Icon" Size="Size.Large" Color="Color.Primary"/>
             @if (Loading)
