--- a/Components/Passwords/PasswordTextField.razor
+++ b/Components/Passwords/PasswordTextField.razor
@@ -1,7 +1,7 @@
 @namespace modulum.Components.Passwords
 
 <MudTextField
-    Margin="Margin.Dense"
+    Margin="Margin.Normal"
     Adornment="Adornment.End"
     AdornmentIcon="@_passwordIcon"
     OnAdornmentClick="@PasswordIconClick"
