--- a/Pages/Criacao/Criacao.razor
+++ b/Pages/Criacao/Criacao.razor
@@ -5,12 +5,12 @@
         <MudIcon Icon="@Icons.Material.Filled.Insights" Class="mr-1 mb-n1" Size="Size.Large" />
         Criação
     </MudText>
-    <MudAlert Class="mt-4" Severity="Severity.Normal" NoIcon="true" Variant="Variant.Text" Elevation="1">
+    <MudAlert Class="mt-4" Severity="Severity.Normal" NoIcon="true" Variant="Variant.Text" Elevation="0">
         <MudStack Row="true" Justify="Justify.SpaceAround">
             <MudText>Aqui você pode criar seu sistema unico e personalizado diferente de tudo no mercado</MudText>
         </MudStack>
     </MudAlert>
-    <MudGrid Class="pt-4" Elevation="2" Style="padding: 24px;">
+    <MudGrid Class="pt-4" Style="padding: 24px;">
         <IndexCard Loading="@_loading" Icon="@Icons.Material.Filled.CenterFocusStrong" Text="Nome" Link="System/Create/Nome" />
         <IndexCard Loading="@_loading" Icon="@Icons.Material.Filled.FitScreen" Text="Telas" />
         <IndexCard Loading="@_loading" Icon="@Icons.Material.Filled.PlaylistAddCheck" Text="Campos" />
