--- a/Shared/Loading.razor
+++ b/Shared/Loading.razor
@@ -1,6 +1,7 @@
 ﻿@namespace modulum.Shared
 
-<MudProgressCircular Color="Color.Primary" Indeterminate="true" Size="Size.Large" StrokeWidth="4" Style="height:100px;width:100px;" />
+<MudProgressCircular Color="Color.Info" Indeterminate="true" Size="Size.Small" StrokeWidth="4" Style="height:60px;width:60px;" />
+
 
 @code {
 
