--- a/_Imports.razor
+++ b/_Imports.razor
@@ -34,6 +34,8 @@
 
 @using modulum.Application.Requests.Identity
 @using modulum.Application.Validators.Requests.Identity
+@using Modulum.Client.Pages.Authentication.Register
+@using modulum.Client.Infrastructure.Managers
 
 @*using modulum.Client.Pages.Authentication*@
 
