--- a/Components/Indexes/IndexAnonymous.razor
+++ b/Components/Indexes/IndexAnonymous.razor
@@ -1,11 +1,14 @@
 ﻿@namespace modulum.Components.Indexes
 
 <MudContainer MaxWidth="MaxWidth.Large">
-    <MudGrid Class="mt-0 mb-6">
+    <MudGrid Class="mt-7">
         <MudItem xs="12" sm="12" md="4" lg="4">
-            <MudText Typo="Typo.h3" Class="mb-6">
-                <strong>Gerencie seu negocio com maestria</strong>
-            </MudText>
+            <MudStack Row="true">
+                <MudImage Src="logo.png" Width="90" Height="90" />
+                <MudText Typo="Typo.h3" Class="mb-6">
+                    <strong>Gerencie seu negocio com maestria</strong>
+                </MudText>
+            </MudStack>
             <MudText Typo="Typo.h5" Class="mb-8">
                 Escola, Estacionamento, Eventos, Estoque: tudo integrado de maneira fácil e intuitiva.
             </MudText>
@@ -17,8 +20,7 @@
                 Variant="Variant.Filled"
                 Style="height: 60px;"
                 Color="Color.Primary"
-                Href="/register"
-            >
+                Href="/register/email">
                 <MudText Typo="Typo.h6">
                     Cadastre-se agora
                 </MudText>
@@ -26,7 +28,7 @@
         </MudItem>
 
         <MudItem xs="12" sm="12" md="8" lg="8">
-            <MudPaper Outlined="true" Class="pa-4" Elevation="3">
+            <MudPaper Outlined="true" Class="pa-4" Elevation="0">
                 @if (IsDarkTheme)
                 {
                     <img src="modulum_home_dark.png" width="100%">
