--- a/Pages/Content/SystemList.razor
+++ b/Pages/Content/SystemList.razor
@@ -1,33 +1,31 @@
 ﻿@page "/System"
 
-<MudContainer Class="mt-4 mb-8" MaxWidth="MaxWidth.Large">
-    <MudText Typo="Typo.h4" Align="Align.Center" Class="mb-4">Meus Sistemas</MudText>
+<MudContainer Class="mt-4 mb-8" MaxWidth="MaxWidth.ExtraExtraLarge">
+    <MudCard Class="p-xxl-5 p-xl-5 p-sm-4 p-md-3 p-lg-2" Outlined="true">
+        <MudText Typo="Typo.h4" Align="Align.Center" Class="mt-9 mb-4">Meus Sistemas</MudText>
+        <MudGrid GutterSize="3" Justify="Justify.Center" Class="pl-6">
+            @foreach (var sistema in Sistemas)
+            {
+                <MudItem xs="12" sm="6" md="4" Class="h-100 text-center align-self-end pa-10">
 
-    <MudGrid GutterSize="3">
-        @foreach (var sistema in Sistemas)
-        {
-            <MudItem xs="12" sm="6" md="4">
-                <MudCard Class="h-100">
-                    <MudCardContent Class="text-center">
+                    <MudStack Class="align-self-start">
                         <MudText Typo="Typo.h6">@sistema.Nome</MudText>
                         <MudText Typo="Typo.body2" Color="Color.Secondary">@sistema.Descricao</MudText>
-                    </MudCardContent>
-                    <MudCardActions Class="justify-center">
-                        <MudButton Variant="Variant.Filled" Color="Color.Primary" FullWidth="true">Acessar</MudButton>
-                    </MudCardActions>
-                </MudCard>
-            </MudItem>
-        }
-
-        <!-- Card de adicionar novo sistema -->
-        <MudItem xs="12" sm="6" md="4">
-            <MudCard Class="h-100 d-flex justify-center align-center" Style="cursor:pointer;" @onclick="AdicionarNovoSistema">
-                <MudCardContent Class="d-flex justify-center align-center" Style="height: 100px;">
+                    </MudStack>
+                    <MudStack Class="justify-center mt-4">
+                        <MudButton Variant="Variant.Outlined" Color="Color.Info" FullWidth="true">Acessar</MudButton>
+                    </MudStack>
+                </MudItem>
+            }
+            <MudItem xs="12" sm="6" md="4" Class="h-100 text-center pa-10 align-self-end">
+                <MudPaper Class="h-100 w-100 d-flex justify-center"
+                          Style="cursor:pointer; height: 100%; border: 2px dashed #444;"
+                          @onclick="AdicionarNovoSistema">
                     <MudIcon Icon="@Icons.Material.Filled.Add" Size="Size.Large" Color="Color.Default" />
-                </MudCardContent>
-            </MudCard>
-        </MudItem>
-    </MudGrid>
+                </MudPaper>
+            </MudItem>
+        </MudGrid>
+    </MudCard>
 </MudContainer>
 
 @code {
