--- a/Pages/Identity/Logout.razor
+++ b/Pages/Identity/Logout.razor
@@ -27,6 +27,7 @@
             await _authenticationManager.Logout();
         }
         loading = false;
+        _navigationManager.NavigateTo("/");
         await base.OnInitializedAsync();
     }
 
