--- a/Pages/Authentication/Register/Email.razor
+++ b/Pages/Authentication/Register/Email.razor
@@ -16,7 +16,7 @@
                         <!--<MudImage Src="logo_512x512.png" Alt="Syki" Elevation="25" Class="rounded-lg mx-20 mt-10 mb-5" />-->
                         <MudCardContent Class="@GetResponsivePadding()">
                             <MudText Typo="Typo.h4" Align="Align.Center" Class="mb-1">Criar uma conta</MudText>
-                            <MudText Typo="Typo.subtitle2" Align="Align.Center" Color="Color.Info" Class="mb-4">
+                            <MudText Typo="Typo.subtitle2" Align="Align.Center" Color="Color.Secondary" Class="mb-4">
                                 Informe seu e-mail abaixo para criar sua conta
                             </MudText>
                             <FluentValidationValidator @ref="_fluentValidationValidator" />
