--- a/Pages/Authentication/Register/Concluido.razor
+++ b/Pages/Authentication/Register/Concluido.razor
@@ -29,7 +29,7 @@
                                        Variant="Variant.Filled"
                                        Size="Size.Large"
                                        Class="mt-1 pa-3">
-                                Entrar
+                                Acessar
                             </MudButton>
                         </MudStack>
                     
