--- a/Pages/Authentication/Register/Confirmacao.razor
+++ b/Pages/Authentication/Register/Confirmacao.razor
@@ -16,7 +16,7 @@
                     <MudCardContent Class="@GetResponsivePadding()">
                         <MudText Typo="Typo.h4" Align="Align.Center" Class="mb-1">Confirme seu email</MudText>
                         <MudText Typo="Typo.overline" Align="Align.Center" Class="mb-1">E-mail: "@_twoFactorModel.Email"</MudText>
-                        <MudText Typo="Typo.subtitle2" Align="Align.Center" Color="Color.Secondary" Class="mb-4">
+                        <MudText Typo="Typo.subtitle2" Align="Align.Center" Color="Color.Info" Class="mb-4">
                             Informe abaixo o código de confirmação que enviamos para o seu E-mail
                         </MudText>
                         <FluentValidationValidator @ref="_fluentValidationValidator" />
